# forge-LLM

./: .gitignore  README.md  modal_train.py  pyproject.toml  requirements.txt  train_llm.py
configs/: __init__.py  dataset_config.py  llm_config.py
data/: __init__.py  download_hf_data.py  loader.py  prepare_mix_data.py  prepare_text_data.py
docs/: book_blueprint.md  debugging_and_expectations.md
generation/: __init__.py  generate.py  sampler.py
models/: __init__.py  components.py  layers.py  llm.py
optimizers/: __init__.py  muon.py
scripts/: plot_run_metrics_svg.py  smoke_train_generate.py
tests/: test_checkpoint_resume.py  test_data_chunking.py  test_device_selection.py  test_model_architecture.py  test_optimizer_routing.py  test_sampler.py
training/: __init__.py  device.py  evaluation.py  trainer.py
utils/: __init__.py  helpers.py  logger.py  plot_loss.py
